--- a/FIBO-Survivors/FIBO-Survivors.vcxproj
+++ b/FIBO-Survivors/FIBO-Survivors.vcxproj
@@ -20,12 +20,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\bullet.h" />
+    <ClInclude Include="src\entity.h" />
+    <ClInclude Include="src\game.h" />
     <ClInclude Include="src\helper.h" />
     <ClInclude Include="src\monster.h" />
     <ClInclude Include="src\skill.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\bullet.cpp" />
+    <ClCompile Include="src\entity.cpp" />
+    <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\helper.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\monster.cpp" />
