--- a/FIBO-Survivors/FIBO-Survivors.vcxproj
+++ b/FIBO-Survivors/FIBO-Survivors.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="src\entity.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\map.h" />
+    <ClInclude Include="src\monster.h" />
     <ClInclude Include="src\player.h" />
   </ItemGroup>
   <ItemGroup>
@@ -29,6 +30,7 @@
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\map.cpp" />
+    <ClCompile Include="src\monster.cpp" />
     <ClCompile Include="src\player.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
