--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "atomic": "cpp",
-        "memory": "cpp"
+        "memory": "cpp",
+        "random": "cpp"
     }
 }
