--- a/FIBO-Survivors/FIBO-Survivors.vcxproj.filters
+++ b/FIBO-Survivors/FIBO-Survivors.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="src\monster.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\bullet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\monster.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
