--- a/FIBO-Survivors/FIBO-Survivors.vcxproj
+++ b/FIBO-Survivors/FIBO-Survivors.vcxproj
@@ -22,18 +22,25 @@
     <ClInclude Include="src\bullet.h" />
     <ClInclude Include="src\entity.h" />
     <ClInclude Include="src\game.h" />
+    <ClInclude Include="src\hpbar.h" />
     <ClInclude Include="src\map.h" />
     <ClInclude Include="src\monster.h" />
     <ClInclude Include="src\player.h" />
+    <ClInclude Include="src\ui.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\bullet.cpp" />
     <ClCompile Include="src\entity.cpp" />
     <ClCompile Include="src\game.cpp" />
+    <ClCompile Include="src\hpbar.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\map.cpp" />
     <ClCompile Include="src\monster.cpp" />
     <ClCompile Include="src\player.cpp" />
+    <ClCompile Include="src\ui.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
